[package]
name = "fusenbd"
version = "0.1.0"
authors = ["Vitaly \"_Vi\" Shukela <vi0oss@gmail.com>"]
description = "FUSE-based network block device client that exposes NBD export as a plain file"
readme = "README.md"
keywords = ["fuse", "nbd", "network-block-device"]
categories = ["filesystem","network"]
license = "MIT/Apache-2.0"
repository = "https://github.com/vi/fusenbd"


[dependencies]
fuse = "0.3.1"
structopt = { version = "0.2", default-features = false }
nbd = "0.2.1"
time = "0.1"
libc = "0.2"
readwriteseekfs = "0.1.0"
bufstream="0.1"
